[package]
name = "spectrum_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# by default feature "microfft-real" is used
[dependencies]
dsp = "0.10.2"
gnuplot = "0.0.37"
itertools = "0.10.5"
itertools-num = "0.1.3"
plotlib = "0.5.1"
tdms = "0.3.0"
