[package]
name = "spectrum_in_rust"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# by default feature "microfft-real" is used
[dependencies]
dsp = "0.10.2"
svg = "0.13.0"
ffi = "0.0.2"
gnuplot = "0.0.37"
iir_filters = "0.1.2"
itertools = "0.10.5"
itertools-num = "0.1.3"
native-dialog = "0.6.3"
opener = "0.5.2"
path-slash = "0.2.1"
tdms = "0.3.0"
rayon = "1.7.0"

[profile.release]
lto = true
