[package]
name = "spectrum_in_rust"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
license = "MIT"
# [toolchain]
# channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# by default feature "microfft-real" is used
[dependencies]
svg = "0.13.0"
gnuplot = "0.0.37"
iir_filters = "0.1.2"
itertools = "0.10.5"
itertools-num = "0.1.3"
native-dialog = "0.6.3"
path-slash = "0.2.1"
tdms = "0.3.0"
welch-sde = "0.1.0"
rustfft = "6.1.0"
[depenencies.native-dialog]
path = "../.."
features = ["windows_dpi_awareness", "windows_visual_styles"]
# [profile.release]
# lto = true
